test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/tests/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/starterhelpi/starterhelpi/node_modules/react-snowfall/lib/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './SnowfallCanvas.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m  5 |[39m [36mimport[39m clickSound [36mfrom[39m [32m'./click.mp3'[39m[33m;[39m
     [90m  6 |[39m [36mimport[39m [33mFooter[39m [36mfrom[39m [32m'./footer'[39m[33m;[39m
    [31m[1m>[22m[39m[90m  7 |[39m [36mimport[39m [33mSnowfall[39m [36mfrom[39m [32m'react-snowfall'[39m
     [90m    |[39m [31m[1m^[22m[39m
     [90m  8 |[39m
     [90m  9 |[39m [36mconst[39m audio [33m=[39m [36mnew[39m [33mAudio[39m(clickSound)[33m;[39m
     [90m 10 |[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/App.tsx:7:1)
      at Object.<anonymous> (src/tests/App.test.tsx:3:1)

PASS src/tests/BasicQs.test.tsx
PASS src/tests/DetailedQs.test.tsx
------------------------|---------|----------|---------|---------|-------------------------
File                    | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s       
------------------------|---------|----------|---------|---------|-------------------------
All files               |   11.54 |    28.98 |    5.29 |   14.56 |                         
 src                    |    1.78 |        0 |    8.33 |    1.78 |                         
  App.tsx               |       0 |        0 |       0 |       0 | 9-167                   
  footer.tsx            |     100 |      100 |     100 |     100 |                         
  index.tsx             |       0 |      100 |     100 |       0 | 14-36                   
  reportWebVitals.ts    |       0 |        0 |       0 |       0 | 3-10                    
 src/pages              |   21.87 |       12 |   10.81 |   21.83 |                         
  BasicQs.tsx           |    37.5 |    16.66 |      20 |   38.09 | 24-30,35-46,52-55,62-76 
  DetailedQs.tsx        |    42.5 |    21.42 |   28.57 |   44.11 | 27-42,48-54,60-62       
  basicReport.tsx       |       0 |        0 |       0 |       0 | 12-90                   
  detailedReport.tsx    |       0 |        0 |       0 |       0 | 11-101                  
  faq.tsx               |       0 |      100 |       0 |       0 | 6                       
  userProf.tsx          |       0 |      100 |       0 |       0 | 6                       
 src/pages/homepages    |   22.22 |    21.05 |    8.33 |   29.03 |                         
  FAQ_user_home.tsx     |       0 |        0 |       0 |       0 | 5-13                    
  basic_home.tsx        |   52.94 |       50 |      20 |   69.23 | 19-24                   
  basic_report_home.tsx |       0 |        0 |       0 |       0 | 5-27                    
  detailed_home.tsx     |   52.94 |       50 |      20 |   69.23 | 19-24                   
  detailed_rep_home.tsx |       0 |        0 |       0 |       0 | 5-28                    
 src/pages/questions    |    1.06 |    81.25 |    2.06 |    2.06 |                         
  BasicQuestion.tsx     |    1.05 |    81.25 |    2.04 |    2.04 | 38-157                  
  DetailedQuestions.tsx |    1.07 |    81.25 |    2.08 |    2.08 | 36-452                  
------------------------|---------|----------|---------|---------|-------------------------

Test Suites: 1 failed, 2 passed, 3 total
Tests:       15 passed, 15 total
Snapshots:   0 total
Time:        4.849 s
Ran all test suites.
